--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ jax = "^0.3.4"
 jaxlib = "^0.3.2"
 matplotlib = "^3.5.1"
 pandas = "^1.4.1"
+jupyterlab = "^3.3.2"
 
 [tool.poetry.dev-dependencies]
 ipykernel = "^6.9.2"
