Big commit with code for creating the dataframes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ jaxlib = "^0.3.2"
 matplotlib = "^3.5.1"
 pandas = "^1.4.1"
 jupyterlab = "^3.3.2"
+pyreadstat = "^1.1.4"
+tqdm = "^4.63.0"
 
 [tool.poetry.dev-dependencies]
 ipykernel = "^6.9.2"
