--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pandas = "^1.4.1"
 jupyterlab = "^3.3.2"
 pyreadstat = "^1.1.4"
 tqdm = "^4.63.0"
+numpy = "^1.22.3"
 
 [tool.poetry.dev-dependencies]
 ipykernel = "^6.9.2"
